--- a/cost_control/products/templates/products/input.html
+++ b/cost_control/products/templates/products/input.html
@@ -5,72 +5,8 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <style>
-        .form-group {
-            display: grid;
-            grid-template-columns: 150px 300px auto; /* Устанавливаем три столбца: метки, элементы ввода и кнопки */
-            gap: 10px;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            font-family: Arial, sans-serif; /* Изменяем шрифт на Arial */
-            font-size: 18px; /* Увеличиваем размер шрифта для меток */
-            font-weight: bold; /* Делаем шрифт жирным */
-            color: #333; /* Изменяем цвет текста */
-        }
-        .form-group input, .form-group select {
-            font-family: Arial, sans-serif; /* Изменяем шрифт на Arial */
-            font-size: 18px; /* Увеличиваем размер шрифта для элементов ввода */
-            height: 40px; /* Устанавливаем высоту элементов ввода */
-            padding: 5px 10px; /* Устанавливаем отступы внутри элементов ввода */
-            width: 100%; /* Устанавливаем ширину элементов ввода */
-            box-sizing: border-box; /* Включаем отступы и границы в ширину элемента */
-            border: 1px solid #ccc; /* Добавляем границу */
-            border-radius: 4px; /* Закругляем углы */
-        }
-        .form-group button {
-            font-size: 18px; /* Увеличиваем размер шрифта для кнопок */
-            justify-self: left; /* Выравниваем кнопки по правому краю */
-            color: white; /* Изменяем цвет текста на белый для лучшей читаемости */
-            padding: 5px 10px; /* Устанавливаем отступы внутри кнопок */
-            border: 1px solid #ccc; /* Добавляем границу */
-            background-color: gray; /* Изменяем цвет фона кнопки на синий */
-            border-radius: 4px; /* Закругляем углы */
-            cursor: pointer; /* Изменяем курсор при наведении на кнопку */
-        }
-        .form-group button:hover {
-            background-color: #e2e2e2; /* Изменяем цвет фона при наведении */
-        }
-        .button-green {
-            font-size: 18px; /* Увеличиваем размер шрифта для текста на кнопке */
-            background-color: green; /* Изменяем цвет фона кнопки на зеленый */
-            color: white; /* Изменяем цвет текста на белый для лучшей читаемости */
-            border-radius: 4px; /* Закругляем углы */
-            border: none; /* Убираем границу кнопки */
-            padding: 10px 20px; /* Добавляем отступы для кнопки */
-            cursor: pointer; /* Изменяем курсор при наведении на кнопку */
-        }
-        .button-red {
-            font-size: 18px; /* Увеличиваем размер шрифта для текста на кнопке */
-            background-color: red; /* Изменяем цвет фона кнопки на красный */
-            color: white; /* Изменяем цвет текста на белый для лучшей читаемости */
-            border-radius: 4px; /* Закругляем углы */
-            border: none; /* Убираем границу кнопки */
-            padding: 10px 20px; /* Добавляем отступы для кнопки */
-            cursor: pointer; /* Изменяем курсор при наведении на кнопку */
-        }
-        .button-report {
-            font-size: 18px; /* Увеличиваем размер шрифта для текста на кнопке */
-            background-color: gray; /* Изменяем цвет фона кнопки на синий */
-            border-radius: 4px; /* Закругляем углы */
-            color: white; /* Изменяем цвет текста на белый для лучшей читаемости */
-            border: none; /* Убираем границу кнопки */
-            padding: 10px 20px; /* Добавляем отступы для кнопки */
-            cursor: pointer; /* Изменяем курсор при наведении на кнопку */
-        }
-
-    </style>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/input_styles.css' %}">
     <script>
         $(function() {
             $("#id_barcode").autocomplete({
